@@ -1,3 +1,10 @@
 - winsock version: ctrl+c is not handled instantaneously, but only after an
   interruptible function is called in main loop (printf,login, etc)
  consequence: ctrl+c is only handled next time a client tries to log in
+
+- openbsd: build fails with:
+  wzd_misc.h:58: conflicting types for `inet_ntop'
+
+  -> run 'touch src/wzd_init_lex.{c,h}'
+  -> run 'touch src/wzd_init_lex.l'
+  -> run 'make' again
