@@ -47,6 +47,8 @@ groups=admin
 rights=0xffffffff
 tagline=wzdftpd
 ip_allowed=127.0.0.1
+ip_allowed=::ffff:127.0.0.1
+ip_allowed=::1
 bytes_ul_total=10
 bytes_dl_total=10
 num_logins=1
