@@ -239,7 +239,14 @@ out_err(LEVEL_INFO,"Send 226 message returned %d\n",ret);
       context->current_limiter = NULL;*/
       FORALL_HOOKS(EVENT_POSTUPLOAD)
         typedef int (*login_hook)(unsigned long, const char*, const char *);
-        ret = (*(login_hook)hook->hook)(EVENT_POSTUPLOAD,user->username,context->current_action.arg);
+        if (hook->hook)
+          ret = (*(login_hook)hook->hook)(EVENT_POSTUPLOAD,user->username,context->current_action.arg);
+        else {
+          char argbuf[1024];
+          /* TODO XXX FIXME what happens if filename contains spaces ? :) */
+          snprintf(argbuf,1024,"%s %s",user->username,context->current_action.arg);
+          ret = hook_call_external(hook,argbuf);
+        }
       END_FORALL_HOOKS
       context->idle_time_start = time(NULL);
     }
